--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
     androidExtensions {
         experimental = true
     }
+    dataBinding {
+        enabled true
+    }
 
     buildTypes {
         release {
