--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
@@ -19,10 +19,23 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    appcompat_version = '1.1.0'
+    ktx_version = '1.1.0'
+    constraintlayout_version = '1.1.3'
+    retrofit2_version = '2.3.0'
+    glide_version = '4.10.0'
+    koin_version = '2.0.1'
+    lifecycle_version = '2.0.0'
+    room_version = '2.2.3'
+    recyclerview_version = '1.1.0'
+    material_version = '1.1.0'
 }
