--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //mockito
+    testImplementation 'org.mockito:mockito-core:3.3.3'
 }
