[refactor] 패키지 구조 변경 (di 전체 하나의 패키지로 구분, view -> ui naming 수정.)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".view.splash.SplashActivity"
+            android:name=".ui.splash.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,7 @@
         </activity>
 
         <activity
-            android:name=".view.shopping.main.ShoppingActivity"
+            android:name=".ui.shopping.main.ShoppingActivity"
             android:theme="@style/ShoppingMainTheme" />
     </application>
 
