--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.4.0'
+    ext.koin_version = '2.0.1'
     repositories {
         google()
         jcenter()
